@@ -42,6 +42,11 @@ import jsyntaxpane.TokenType;
     public int yychar() {
         return yychar;
     }
+
+    private static final byte PARAN     = 1;
+    private static final byte BRACKET   = 2;
+    private static final byte CURLY     = 3;
+    
 %}
 
 /* main character classes */
@@ -130,13 +135,13 @@ StringCharacter = [^\r\n\"\\]
   
   /* operators */
 
-  "("                            |
-  ")"                            |
-  "{"                            | 
-  "}"                            | 
-  "["                            | 
-  "]"                            | 
-  ";"                            | 
+  "("                            { return token(TokenType.OPERATOR,  PARAN); }
+  ")"                            { return token(TokenType.OPERATOR, -PARAN); }
+  "{"                            { return token(TokenType.OPERATOR,  CURLY); }
+  "}"                            { return token(TokenType.OPERATOR, -CURLY); }
+  "["                            { return token(TokenType.OPERATOR,  BRACKET); }
+  "]"                            { return token(TokenType.OPERATOR, -BRACKET); }
+  ";"                            |
   ","                            | 
   "."                            | 
   "="                            | 
