@@ -1,12 +1,19 @@
 #
 # JavaScript
 #
-Action.toggle-comments = jsyntaxpane.actions.ToggleCommentsAction, control SLASH
 Action.execute-script = jsyntaxpane.actions.ScriptRunnerAction, control R
 Action.execute-script.ScriptExtension = js
 Action.execute-script.MenuText = Execute Script
 Action.execute-script.ToolTip = Execute JavaScript in internal JRE
 Action.execute-script.SmallIcon = play.png
+
+Action.indent.WordRegex=\\w+|\\/(\\*)+
+Action.parenthesis = jsyntaxpane.actions.PairAction, typed (
+Action.brackets = jsyntaxpane.actions.PairAction, typed [
+Action.quotes = jsyntaxpane.actions.PairAction, typed '
+Action.double-quotes = jsyntaxpane.actions.PairAction, typed "
+Action.close-curly = jsyntaxpane.actions.JUnindentAction, typed }
+
 PopupMenu = \
   ${DEFAULT_EDIT_MENU}  , \
   -                     , \
@@ -18,3 +25,4 @@ PopupMenu = \
   toggle-lines          , \
   -                     , \
   execute-script
+
